fix by letter-spacing: 0.03

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,6 @@ body {
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    letter-spacing: 0.03em;
     color: var(--logo-text-color-blue);
     margin-left: 215px;
     width: 145px;
@@ -82,7 +81,6 @@ body {
 }
 .menu-link {
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
 }
@@ -108,7 +106,6 @@ body {
 
 .mail-link {
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--main-text-color-gray);
@@ -119,7 +116,6 @@ body {
 }
 .phone-number-link {
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     color:var(--main-text-color-gray);
@@ -194,17 +190,12 @@ body {
 }
 .feature-head {
     font-weight: 700;
-    font-size: 14px;
     line-height: 1.14;
-    letter-spacing: 3%;
     text-transform: uppercase;
     color: var(--main-text-color-black);
 }
 .deskription-feature {
-   
-    font-size: 14px;
     line-height: 1.71;
-    letter-spacing: 0.03em;
     color: var(--main-text-color-gray)
 }
 
@@ -218,7 +209,6 @@ body {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.7;
-    letter-spacing: 0.03em;
     color: var(--main-text-color-black);
     margin-bottom: 50px;
 }
@@ -239,7 +229,6 @@ body {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.7;
-    letter-spacing: 0.03em;
     color: var(--main-text-color-black);
     display: flex;
     justify-content: center;
@@ -266,7 +255,6 @@ body {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
-    letter-spacing: 0.03em;
     color: var(--main-text-color-black);
     margin-top: 30px;
     display: flex;
@@ -276,7 +264,6 @@ body {
 .post-member-team {
     font-size: 16px;
     line-height: 1.19;
-    letter-spacing: 0.03em;
     color: var(--main-text-color-gray);
     margin-top: -10px;
     display: flex;
@@ -297,7 +284,6 @@ body {
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    letter-spacing: 0.03em;
     color: var(--logo-text-color-blue);
     margin-left: 215px;
     width: 145px;
@@ -325,15 +311,12 @@ body {
 
 
 .address-link {
-    font-size: 14px;
     line-height: 1.7;
-    letter-spacing: 0.03em;
     color: #FFFFFF;
 }
 
 .footer-mail-link {
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--main-text-color-gray);
@@ -341,7 +324,6 @@ body {
 }
 .footer-phone-number-link {
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;;
     color: var(--main-text-color-gray);
@@ -391,7 +373,6 @@ body {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.6;
-    letter-spacing: 0.03em;
     color: var(--main-text-color-black);
     height: 38px;
     padding-left: 22px;
@@ -412,7 +393,6 @@ body {
     font-size: 16px;
     line-height: 26px;
     text-align: center;
-    letter-spacing: 0.03em;
     color: var(--main-text-color-black);
 }
 .nav-list-link:hover,
